chandeliers-lus/tests/compile_fail/ui/options/malformed.rs
//! Typo in annotation (`#[mai]` instead of `#[main]`)
chandeliers_lus::decl! {
    #[mai]
    node system() returns ();
    let tel
}

fn main() {}
