chandeliers-lus/tests/compile_fail/ui/options/malformed.stderr
error: Malformed attribute mai: no such attribute
 --> tests/compile_fail/ui/options/malformed.rs:3:5
  |
3 |     #[mai]
  |     ^^^^^^
  |
  = note: See the available options and their definition at https://github.com/Vanille-N/chandeliers#compilation-options
